--- a/.github/workflows/extend-pipeline.yml
+++ b/.github/workflows/extend-pipeline.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Build application
         run: ci/build-app.sh
       - name: Test
-        run: ci/unit-test-app.sh.
+        run: ci/unit-test-app.sh
