--- a/.github/workflows/build-md.yml
+++ b/.github/workflows/build-md.yml
@@ -1,7 +1,7 @@
 name: Main workflow
 
 # Triggers the workflow on push 
-on: push
+# on: push
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
