--- a/.github/workflows/Storing_artifacts.yml
+++ b/.github/workflows/Storing_artifacts.yml
@@ -17,9 +17,18 @@ jobs:
           # super-linter needs the full git history to get the
           # list of files that changed across commits
           fetch-depth: 0
-
       - name: Super-linter
-        uses: super-linter/super-linter@v7.1.0 # x-release-please-version
+        uses: super-linter/super-linter/slim@v7.1.0 # x-release-please-version
         env:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload a Build Artifact # Name of the step
+        uses: actions/upload-artifact@v4 # Action to use
+        with: # Parameters for the action
+          name: my-artifact # Name of the artifact to upload. Optional. Default is 'artifact
+          path: path/to/artifact/ # A file, directory or wildcard pattern that describes what to upload. Required.
+      - name: Download a single artifact # Name of the step
+        uses: actions/download-artifact@v4 # Action to use
+        with: # Parameters for the action
+          name: my-artifact # Name of the artifact to download. Optional. If unspecified, all artifacts for the run are downloaded.
+          path: path/to/download/artifact/     # Destination path. Supports basic tilde expansion.  # Optional. Default is $GITHUB_WORKSPACE
