--- a/.github/workflows/Storing_artifacts.yml
+++ b/.github/workflows/Storing_artifacts.yml
@@ -6,10 +6,16 @@ on: push
 jobs:
   # This workflow contains a single job called "build"
   Build:
+    name: Lint
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Creates a container, which is teared down after run.
-    container: gradle:6-jdk11
+
+    permissions:
+      contents: read
+      packages: read
+      # To report GitHub Actions status checks
+      statuses: write
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
