--- a/.github/workflows/Storing_artifacts.yml
+++ b/.github/workflows/Storing_artifacts.yml
@@ -28,6 +28,7 @@ jobs:
         env:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_ALL_CODEBASE: false
       - name: Upload a Build Artifact # Name of the step
         uses: actions/upload-artifact@v4 # Action to use
         with: # Parameters for the action
