--- a/.github/workflows/Storing_artifacts.yml
+++ b/.github/workflows/Storing_artifacts.yml
@@ -29,6 +29,7 @@ jobs:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_GITHUB_ACTIONS: true
       - name: Upload a Build Artifact # Name of the step
         uses: actions/upload-artifact@v4 # Action to use
         with: # Parameters for the action
