--- a/.github/workflows/Storing_artifacts.yml
+++ b/.github/workflows/Storing_artifacts.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4 # Action to use
         with: # Parameters for the action
           name: my-artifact # Name of the artifact to upload. Optional. Default is 'artifact
-          path: actions/upload-artifact # A file, directory or wildcard pattern that describes what to upload. Required.
+          path: . # actions/upload-artifact # A file, directory or wildcard pattern that describes what to upload. Required.
       - name: Download a single artifact # Name of the step
         uses: actions/download-artifact@v4 # Action to use
         with: # Parameters for the action
