--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,9 @@
 name: Docker image
 on: push
+env:
+  docker_username:  docker_username: ${{ github.actor }} 
+  docker_password: ${{ secrets.GITHUB_TOKEN }} #Nees to be set to be made available to the workflow
+  #GIT_COMMIT: github.sha
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -16,12 +20,9 @@ jobs:
         with: 
           name: code
           path: .
-    Docker-image:
-      runs-on: ubuntu-latest
-      needs: [clone down repository]
-      permissions:
+  Docker-image:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    permissions:
       packages: write
-    env:
-      docker_username:  docker_username: ${{ github.actor }} 
-      docker_password: ${{ secrets.GITHUB_TOKEN }} #Nees to be set to be made available to the workflow
-      #GIT_COMMIT: github.sha
+
