--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
-      - name: clone down repository
+      - name: Clone down repository
         uses: actions/checkout@v4       
       - name: Build application
         run: ci/build-app.sh
@@ -25,4 +25,9 @@ jobs:
     needs: [Build]
     permissions:
       packages: write
-
+    steps:
+      - name: Download code
+        uses: actions/download-artifact@v4
+        with:
+          name: code
+          path: .
