--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ on: push
 env:
   docker_username: ${{ github.actor }} 
   docker_password: ${{ secrets.GITHUB_TOKEN }} #Nees to be set to be made available to the workflow
-  #GIT_COMMIT: github.sha
+  GIT_COMMIT: github.sha
 jobs:
   Build:
     runs-on: ubuntu-latest
